--- a/src/css/style.css
+++ b/src/css/style.css
@@ -131,14 +131,15 @@ h3 {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     justify-items: center;
-    gap: 1rem;
+    gap: 1.5rem;
+    margin-bottom: .5rem;
 }
 
 .card-item {
     background-color: aliceblue;
     color: #3a3436;
     text-align: center;
-    border-radius: .8rem .8rem 0 0;
+    border-radius: .8rem;
     width: 30rem;
     transition: transform 0.25s ease-out, box-shadow 0.25s ease-out; /* Transição suave para a mudança de escala e a sombra */
 }
@@ -156,6 +157,7 @@ h3 {
     height: 15rem;
     width: 100%;
     margin-bottom: -.3rem;
+    border-radius: .8rem;
 }
 
 /* Estilos para página Contato */
